[package]
name = "patr_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3", features = ["derive", "env"] }
futures = "0.3"
k8s-openapi = { version = "0.17", features = ["v1_24"] }
kube = { version = "0.80", features = ["derive", "runtime", "client"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
