[package]
name = "macros"
version.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["default"] }
quote = { workspace = true, features = ["default"] }
syn = { workspace = true, features = ["default", "full"] }
regex = { workspace = true, features = ["default"] }
