[package]
name = "macros"
version.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["default"] }
quote = { workspace = true, features = ["default"] }
regex = { workspace = true, features = ["default"] }
syn = { workspace = true, features = ["default", "full"] }

[dev-dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
components = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
leptos_router = { workspace = true }
models = { workspace = true }
preprocess = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
