[package]
name = "models"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["default"] }
axum = { workspace = true, features = ["default", "http2", "ws", "tracing"] }
axum-extra = { workspace = true, features = ["typed-routing"] }
axum-typed-websockets = { workspace = true, features = ["default"] }
hex = { workspace = true, features = ["default"] }
macros = { workspace = true, features = [] }
preprocess = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["default", "rustls-tls", "json"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_test = { workspace = true, features = [] }
tower = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true, features = [] }
typed-headers = { workspace = true, features = [] }
url = { workspace = true, features = ["default"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { workspace = true, features = ["uuid", "postgres"] }
time = { workspace = true, features = ["default", "serde-human-readable"] }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
time = { workspace = true, features = [
	"default",
	"serde-human-readable",
	"wasm-bindgen",
] }
uuid = { workspace = true, features = ["v4", "js"] }
