[package]
name = "models"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["default"] }
axum = { workspace = true, features = ["json"] }
axum-extra = { workspace = true, features = ["typed-routing"] }
base64 = { workspace = true, features = ["default"] }
headers = { workspace = true, features = [] }
hex = { workspace = true, features = ["default"] }
http = { workspace = true, features = ["default"] }
ipnetwork = { workspace = true, features = ["default"] }
macros = { workspace = true, features = [] }
preprocess = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["default", "rustls-tls", "json"] }
schemars = { workspace = true, features = ["default", "uuid1"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_test = { workspace = true, features = [] }
serde_urlencoded = { workspace = true, features = [] }
strum = { workspace = true, features = ["default", "derive"] }
tokio = { workspace = true, features = [] }
tokio-tungstenite = { workspace = true, features = [] }
tower = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
typed-builder = { workspace = true, features = [] }
url = { workspace = true, features = ["default"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum-typed-websockets = { workspace = true, features = ["default"] }
sqlx = { workspace = true, features = ["uuid", "postgres", "macros"] }
time = { workspace = true, features = ["default", "serde-human-readable"] }
uuid = { workspace = true, features = ["v1", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
time = { workspace = true, features = [
	"default",
	"serde-human-readable",
	"wasm-bindgen",
] }
uuid = { workspace = true, features = ["v1", "v4", "js"] }
