[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "common"
rust-version.workspace = true
version.workspace = true

[dependencies]
config = { workspace = true }
futures = { workspace = true }
http = { workspace = true, features = ["default"] }
macros = { workspace = true }
models = { workspace = true }
preprocess = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
semver = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "tls-rustls",
    "macros",
    "uuid",
    "time",
    "migrate",
    "ipnetwork",
    "sqlite",
] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["default", "sync"] }
tokio-tungstenite = { workspace = true, features = ["default"] }
tracing = { workspace = true, features = ["default", "async-await"] }
tracing-log = { workspace = true, features = ["default"] }
tracing-opentelemetry = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["default"] }
