[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "common"
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
config = { workspace = true }
futures = { workspace = true }
http = { workspace = true, features = ["default"] }
macros = { workspace = true }
models = { workspace = true }
preprocess = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
semver = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["default", "sync"] }
tokio-tungstenite = { workspace = true, features = ["default"] }
tracing = { workspace = true, features = ["default", "async-await"] }
tracing-log = { workspace = true, features = ["default"] }
tracing-opentelemetry = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["default"] }
sqlx = { workspace = true, features = [
	"runtime-tokio",
	"tls-rustls",
	"uuid",
	"time",
	"sqlite",
] }
