[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "docker"
rust-version.workspace = true
version.workspace = true

[dependencies]
config = { workspace = true, features = ["default"] }
bollard = { workspace = true, features = ["default"] }
futures = { workspace = true, features = ["default"] }
http = { workspace = true, features = ["default"] }
models = { workspace = true }
preprocess = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["default", "sync"] }
tokio-tungstenite = { workspace = true, features = ["default"] }
