[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "docker"
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bollard = { workspace = true, features = ["default"] }
common = { workspace = true }
config = { workspace = true, features = ["default"] }
futures = { workspace = true, features = ["default"] }
http = { workspace = true, features = ["default"] }
macros = { workspace = true, features = [] }
models = { workspace = true, features = [] }
preprocess = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
semver = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["default", "sync"] }
tokio-tungstenite = { workspace = true, features = ["default"] }
tracing = { workspace = true, features = ["default", "async-await"] }
tracing-log = { workspace = true, features = ["default"] }
tracing-opentelemetry = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["default"] }
